k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: employee
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
